styles/styles.css
/* ... */
.card-view-button-item {
  background-color: white;
  border-radius: 4px;
  border: 2px solid #E5E5E5;
  width: 48px;
  height: 48px;
}

.card-view-button-item:hover {
  border: 2px solid #000;
  transition: transform 0.5s ease;
}

.card-view-button-item:focus {
  border: 2px solid #68A2CA;
  transition: transform 0.5s ease;
}

.card-view-button-item:active {
  border: 2px solid black;
  transition: transform 0.5s ease;
}

.layout-current {
  border: 2px solid black;
}

.select-control {
  text-indent: 8px;
  font-family: "PT Sans", sans-serif;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 21px;
  width: 292px;
  height: 48px;
  color: #333333;
  border-radius: 4px;
  border: 2px solid #E5E5E5;
  cursor: pointer;
}

.select-control:hover {
  border: 2px solid #68A2CA;
}

.select-control:focus-visible {
  outline: 2px solid #68A2CA;
}

.select-control:disabled {
  border: 2px solid #B3B3B3;
  color: #B3B3B3;
}

.sort {
  text-decoration: none;
}

.sort-current {
  background-color: black;
  color: white;
  border-radius: 4px;
  border-color: black;
  text-decoration: none;
}



.product-list {
  display: flex;
  flex-wrap: wrap;
  gap: 16px;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.product-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  border: 1px solid #E6E6E6;
  border-radius: 4px;
  background: white;
}

.product-card:hover {
  box-shadow: 25px 0 50px 0 rgba(0, 0, 0, 0.15), 0 25px 50px 0 rgba(0, 0, 0, 0.15);
}

.product-card-link {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  padding: 20px 20px 20px 20px;
  font-family: "PT Sans", sans-serif;
  font-size: 24px;
  font-style: normal;
  font-weight: 700;
  line-height: 28px;
  color: black;
  text-decoration: none;
  margin-top: 0;
}


.product-card-title {
  margin: 0;
}

.price-info {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 300px;
  padding-bottom: 16px;
}

.product-card-actions {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 300px;
  padding-bottom: 16px;
}

.product-card-image {
  padding-bottom: 16px;
}

.rating-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 300px;
  padding-bottom: 20px;
}

.hotel-card-group {
  font-family: "PT Sans", sans-serif;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 21px;
  color: #333333;
  margin: 0;
  padding: 0;
}

.product-card-actions {
  display: flex;
  flex-direction: row;
}

.show-more {
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: "PT Sans", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  line-height: 20px;
  color: white;
  background-color: #756157;
  text-decoration: none;
  text-transform: uppercase;
  margin: 0;
  padding: 0;
  width: 140px;
  height: 36px;
  border-radius: 4px;
  cursor: pointer;
}

.show-more:hover {
  background-color: #615048;
}

.show-more:active {
  background-color: #756157;
  color: #9E9089;
}

.show-more:focus-visible {
  background-color: #615048;
}

.show-more:disabled {
  background-color: #E5E5E5;
}

.wish-list {
  font-family: "PT Sans", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  line-height: 20px;
  color: white;
  background-color: #82B3D3;
  border: none;
  text-transform: uppercase;
  margin: 0;
  padding: 0;
  width: 140px;
  height: 36px;
  border-radius: 4px;
  cursor: pointer;
}

.wish-list:hover {
  background-color: #82B3D3;
}

.wish-list:active {
  background-color: #82B3D3;
  color: #A7CAE0;
}

.wish-list:focus-visible {
  background-color: #68A2CA;

}

.wish-list:disabled {
  background-color: #E5E5E5;
  color: white;
}

.button-wish-list-current {
  font-family: "PT Sans", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  line-height: 20px;
  color: white;
  background-color: #7DB54F;
  border: none;
  text-transform: uppercase;
  margin: 0;
  padding: 0;
  width: 140px;
  height: 36px;
  border-radius: 4px;
  cursor: pointer;
}

.button-wish-list-current:hover {
  background-color: #6C9E42;
}

.button-wish-list-current:hover:active {
  color: hsla(0, 0%, 100%, 0.3);
}

.button-wish-list-current:focus {
  background-color: #6C9E42;
}

.button-wish-list-current:disabled {
  background-color: #E5E5E5;
}

.rating-list {
  display: flex;
  align-items: center;
  flex-direction: row;
  list-style-type: none;
  width: 140px;
  height: 36px;
  gap: 12px;
  margin: 0;
  padding: 0;
}


.rating-counter {
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: "PT Sans", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 20px;
  color: #333333;
  background-color: #F2F2F2;
  border-radius: 4px;
  border: none;
  margin: 0;
  text-align: center;
  width: 140px;
  height: 36px;
}

.rating-item {
  position: relative;
  width: 18px;
  height: 18px;
}

.rating-container {
  display: flex;
  flex-direction: row;
}

.rating-star::before {
  background: url(../images/icon-rating-star.svg);
}

.rating-button::before {
  position: absolute;
  content: "";
  display: block;
  width: 18px;
  height: 18px;
  background-color: transparent;
  background-position: center;
  background-repeat: no-repeat;
  top: 2px;
  left: 2px;
}

.rating-button {
  background: none;
  border: none;
  cursor: pointer;
}

.hr-line {
  height: 0;
  border: none;
  border-top: 1px solid #E5E5E5;
  width: 1060px;
}

.hr-container {
  display: flex;
  align-items: center;
  height: 80px;


}

.pagination-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  width: 1060px;
  margin: 0 auto;
  padding-bottom: 60px;
}

.pagination-item {
  display: flex;
  align-items: center;
  text-align: center;
}
/* ... */

